Legg til egenvurdering
Signed-off-by: Jokra005 <jokra005@osloskolen.no>

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <title>Kuben videregående skole</title>
 <link rel="stylesheet" href="css/common.css">
 <header>
-	<div>
+	<div class="prenav">
 		<h1>Kuben videregående skole</h1>
 		<img src="assets/images/OsloskolenLogo.svg" class="logo">
 	</div>
